<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastroActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.login.RegistryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageViewCadastro"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic__803966_checklist_clipboard_task_todo_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Informe seu nome"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:hint="@string/hintname"
            android:inputType="textPersonName"
            android:background="@drawable/bg_edit"
            android:padding="14dp"
            android:textColor="@color/bg_color"
            android:textColorHint="@color/hint_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email_login_email"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/cadastroEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_edit"
            android:padding="14dp"
            android:textColor="@color/bg_color"
            android:textColorHint="@color/hint_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crie uma senha"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/textViewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:hint="Senha"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit"
            android:padding="14dp"
            android:textColor="@color/bg_color"
            android:textColorHint="@color/hint_gray"/>

        <Button
            android:id="@+id/buttonRealizarCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/buttonRealizar"
            app:backgroundTint="@null"
            android:background="@drawable/bg_button"
            android:textColor="@color/bg_color" />

    </LinearLayout>

</ScrollView>